objects/WW_OppFieldHistory__c.object
<CustomObject><fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>OpportunityId__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Field History</relationshipLabel>
        <relationshipName>Opportunity_Field_History_Copy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Opportunity Field History</label><nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Field History Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Opportunity Field History</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>